--- a/src/constants/locales/en.yaml
+++ b/src/constants/locales/en.yaml
@@ -1,5 +1,5 @@
 en: English
-zh_cn: Chinese
+zh: Chinese
 current_lang: Current language
 
 start_info: I will help you search telegram group, channel, bot, people. You can also submit new item, get details with telegram ID
